	  nano.c:global_init(), window_init(), and handle_sigwinch().
	  New macro MIN_EDITOR_COLS replaces MIN_FILL_LENGTH
	  (David Benbennick).
	- Change ngettext macro to P_(), to avoid a clash with the reserved C
	  __ identifier (Jordi).
	- Memory leak fixes for files.c:do_insertfile(),do_browser(),
	  nano.c:do_spell(), and search.c:do_replace() (David Benbennick).
- files.c:
  cwd_tab_completion()
	- Memory leak fix (David Benbennick).
  intput_tab()
	- Fix assumption that matches is null terminated (David 
	  Benbennick).
- nano.c:
  breakable()
	- Fix incorrect return value on short lines (David Benbennick).
  do_help()
	- Fix line lengths not being computed properly, causes display
	  glitches most noticeable with < 20 rows.  New function
	  nano.c:line_len(). (David Benbennick).
  do_justify()
	- Add regfree() to quote regex (David Benbennick).
	- Only copy previous indent if AUTOINDENT is set (David 
	  Benbennick).
  help_init()
	- Fix crashing in do_help when COLS < 23 (David Benbennick).
  main()
	- Fix nano not compiling with ENABLE_RCFILE and DISABLE_TABCOMP
	  (David Benbennick).
- rcfile.c:
  colortoint()
	- Don't bomb after invalid color and print bad color name
	  (David Benbennick).
  colortoint, parse_colors()
	- Don't add strings with invalid fg colors at all.
- search.c:
  do_gotoline()
	- Only goto_abort() if we *didnt* abort the command, making
	  the function seem horribly misnamed ;-) (David Benbennick).
- winio.c:
  nanogetstr()
	- Remove unnecessary reset of x since it is now handled
	  elsewhere (David Lawrence Ramsey).
  statusq()
	- Always blank the statusbar on exit (David Benbennick).
- nano.1, nano.1.html:
	- Add initialization file comments, change some options from 
	  bracketed to underlined to emphasize that they are not 
	  optional.
	- Add SEE ALSO section (Jordi).
- nanorc.5:
	- Add nanorc manpage, with descriptions of all available commands
	  (Jordi).
- nanorc.sample:
	- Make nanorc entry less tolerant of invalid colors.